# openclaw-skill-kanban-workflow

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  README.md  SKILL.md  WORKER.md  package-lock.json  package.json  pyproject.toml
.clawhub/: origin.json
references/: ARCH_REVIEW.md  MAX_CONCURRENT_WORKERS_ANALYSIS.md  REQUIREMENTS.md  ROBUST_WORKFLOW_ARCHITECTURE.md  TECH_PLAN.md
scripts/: auto_reopen_scan_cron.sh  completion_sweep_cron.sh  dispatcher-cron.sh  plane_webhook_kwf.py  post_link_comment_test.ts  startup_repair.sh  verification_primitives.sh
src/: adapter.ts  cli.ts  config.ts  github_adapter.ts  index.ts  models.ts  stage.ts
tests/: active_run_watchdog.test.ts  agent_io.test.ts  auto_reopen.integration.test.ts  auto_reopen.test.ts  autopilot_cli.test.ts  autopilot_tick.test.ts  cli_tips.test.ts  conftest.py  cron_dispatch_worker_parser.test.ts  delegation_reconcile_cli.test.ts  delegation_reconciler.test.ts  diff.test.ts  github_adapter.test.ts  linear_adapter.test.ts  plane_adapter.test.ts  plane_multi_project.test.ts  queue_position_comments.test.ts  reliability_self_check.test.ts  rocketchat_status.test.ts  session_dispatcher.test.ts  setup.test.ts  subagent_completion_reconcile_cli.test.ts  subagent_completion_reconciler.test.ts  test_diff.py  test_github_adapter.py  test_stage.py  tick.test.ts  verification_primitives.test.ts  worker_contract.test.ts  worker_result_links.test.ts  worker_runtime.test.ts  worker_runtime_dispatch_retry.test.ts  workflow_decision_policy.test.ts  workflow_loop_derived_state.test.ts  workflow_loop_persistence.test.ts  (+2 more)
(+48 files in other folders)
