[project]
name = "openclaw-skill-clawban"
version = "0.0.0"
description = "Clawban skill: stage-based PM coworker with CLI-auth adapters"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
